# neutralinojs-extension-python

./: .age.toml  .editorconfig  .env.example  .gitignore  CHANGES.rst  README.md  Taskfile.yaml  aqua.yaml  lefthook-local_.yaml  lefthook.yaml  package.json  pyproject.toml  renovate.json5
.github/: release-body.md
.github/workflows/: main.yaml  release.yaml
e2e/: conftest.py  test_it.py
e2e/app/: .gitignore  neutralino.config.json
e2e/app/extensions/: backend.py
e2e/app/resources/: index.html
e2e/app/resources/js/: main.js
example/: .gitignore  neutralino.config.json
example/extensions/: backend.py
example/resources/: index.html  styles.css
example/resources/js/: main.js
scripts/: export-native_api.py
src/neutralinojs_extension/: __init__.py  application.py  host.py
src/neutralinojs_extension/native_api/: __init__.py  _base.py  app.py  debug.py  os.py  window.py
tests/: test_application.py
