[project]
name = "neutralinojs-extension"
version = "0.0.0"
description = "Toolkit for Neutralinojs extension using python."
readme = "README.md"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.10"
dependencies = [
    "websocket-client>=1.9.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a27",
    "typing-extensions>=4.15.0",
]
