[project]
name = "neutralinojs-extension"
version = "0.0.1"
description = "Toolkit for Neutralinojs extension using python."
readme = "README.md"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a27",
    "typing-extensions>=4.15.0",
    {include-group = "test"},
    {include-group = "e2e"},
]
test = [
    "pytest>=8.4.2",
    "pytest-aiohttp>=1.1.0",
]
e2e = [
    "pytest>=8.4.2",
]

[tool.doc8]
ignore = ["D004"]
